sql entry repository component nastaveni DB

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,3 +3,8 @@ application.langs="en"
 logger.root=ERROR
 logger.play=INFO
 logger.application=DEBUG
+
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/scw-play"
+db.default.user=etndevel
+db.default.password=etndevel
